--- a/contract.tex
+++ b/contract.tex
@@ -4,72 +4,89 @@
 %%%                         ИНФОРМАЦИЯ ДЛЯ ДОГОВОРА                          %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% Дата заключения договора.
 \def\date{%
-    <<\ul{1}>> \ul{февраля} \ul{2023} г.
+    <<7>> февраля 2023 г.
 }
+
+% ФИО декана в родительном падеже,
+% номер и дата доверенности (выдается раз в год).
 \def\dean{
     Шафаревича Андрея Игоревича,
     действующего на основании
     доверенности №322-22/010-50 от 6 декабря 2022 года
 }
 \def\deanShort{
-    % Для подписи
-    Шафаревич~А.\,И.
+    Шафаревич~А.~И.
 }
-\def\organizationName{%
-    % В связи с особенностями реализации пакета soulutf8 невозможно удалить
-    % начальные и завершающие пробелы внутри подчеркиваемого текста, поэтому
-    % после наименования организации необходимо разместить символ %. Задать
-    % подчеркивание внутри текущего макроса тоже не получается, так как
-    % наименование организаии использутся как в начале договора, так и
-    % в разделе 5.
-    %
-    % UPD [2023.03.09]. Нашел неприятную особенность команды \ul из пакета
-    % soulutf8. Некорректно работают правые кавычки-елочки (<<..>>). Наиболее
-    % простой способ решения данной проблемы -- использование команд из пакета
-    % fontenc \guillemotleft и \guillemotright. При большом желании можно
-    % в начало данного файла вынести переопределения:
-    % \let\flqq=\guillemotleft
-    % \let\frqq=\guillemotright
-    % Примера наименования организации с кавычками:
-    % Государственное бюджетное общеобразовательное учреждение города Москвы
-    % \guillemotleft{}Школа №0000\guillemotright
-    наименование организации, учреждения, предприятия%
+
+% Наименование организации, учреждения, предприятия.
+\def\organizationName{
+    ООО <<Органзиация>>
 }
+
+% ФИО руководителя организации в родительном падеже,
+% наименование основания.
 \def\organizationDirector{
-    \ul{Ф.И.О. руководителя организации в родительном падеже},
+    Иванова Ивана Ивановича,
     действующего на основании
-    \ul{наименование основания}
+    Устава
 }
 \def\organizationDirectorShort{
-    % Для подписи
-    Фамилия~И.\,О.
+    Иванов~И.\,И.
 }
+
+% Адрес организации, ИНН, КПП.
 \def\organizationAddress{
-    адрес органиизации \\
-    ИНН ... / КПП ...
+    123456, г.~Москва, ул.~Ленина, д.~1
 }
+\def\organizationINN{
+    1234567890
+}
+\def\organizationKPP{
+    123456789
+}
+
+% Контактное лицо: ФИО, e-mail
+% (вместо _ необходимо писать \_), телефон.
 \def\organizationContactName{
-    ФИО контактного лица
+    Иванов Иван Иванович
 }
 \def\organizationContactEmail{
-    e-mail контактного лица
+    ivanov\_ii@mail.com
 }
 \def\organizationContactPhone{
-    % Пример: +7~(912)~345-67-89
-    телефон контактного лица
+    +7~(912)~345-67-89
 }
+
+% Список студентов-практикантов.
+% Для добавления студентов необходимо
+% использовать макрос \addStudet.
 \def\studentsList{
-    % \addStudent{ФИО}
-    \addStudent{Иванов Иван Иванович}
-    \addStudent{Иванов \newline Иван \newline Иванович}
+    \addStudent{Иванов}{Иван}{Иванович}
+    \addStudent{Иванов}{Иван}{Иванович}
+    \addStudent{Иванов}{Иван}{Иванович}
 }
+
+% Список помещений, оборудования и технических средств.
+% Для добавления помещений необходимо использовать макрос \addRoom.
+% Можно оставить пустым.
+% Для принудительного разрыва строк необходимо использовать \newline
 \def\roomsList{
-    % Можно оставить пустым.
-    % \addRoom{список помещений}{адрес}
+    \addRoom
+        {Помещение и оборудование \newline ООО <<Организация>>}
+        {г.~Москва, ул.~Ленина, д.~1}
+    \addRoom
+        {Помещение и оборудование \newline ООО <<Организация>>}
+        {г.~Москва, ул.~Ленина, д.~1}
+    \addRoom
+        {Помещение и оборудование \newline ООО <<Организация>>}
+        {г.~Москва, ул.~Ленина, д.~1}
 }
+
+% Даты начала и конца практики.
 \def\practiceBeginDate{
-    1 февраля 2023
+    7 февраля 2023
 }
 \def\practiceEndDate{
     28 февраля 2023
@@ -91,7 +108,6 @@
 \usepackage{tempora}
 
 \usepackage[fontsize=12pt]{scrextend}
-% \linespread{1.2}
 
 \usepackage{setspace}
 \onehalfspace
@@ -181,7 +197,7 @@
 образования <<Московский государственный университет имени
 М.\,В.~Ломоносова>> в лице декана механико\,--\,математического факультета
 \trim{\dean}, (далее --- Организация), с одной стороны и
-\ul\organizationName, (далее --- Профильная организация), в лице
+\trim{\organizationName}, (далее --- Профильная организация), в лице
 \trim{\organizationDirector} с другой стороны, именуемые по отдельности
 <<Сторона>>, а вместе <<Стороны>>, заключили настоящий Договор о
 нижеследующем:
@@ -335,7 +351,8 @@
     \begin{minipage}[t]{.48\textwidth}
         \organizationName \\[.5\baselineskip]
         Юридический адрес: \\
-        \trim{\organizationAddress} \\[.5\baselineskip]
+        \trim{\organizationAddress} \\
+        ИНН \trim{\organizationINN} / КПП \trim{\organizationKPP} \\[.5\baselineskip]
         Контактное лицо: \\
         ФИО: \trim{\organizationContactName} \\
         E-mail: \texttt{\trim{\organizationContactEmail}} \\
@@ -371,15 +388,6 @@
 \def\appendix#1#2#3{
     \newpage
 
-    % \hfill
-    % \begin{minipage}[t]{.48\textwidth}
-    %     Приложение №#1
-    %     \vskip .5\baselineskip
-    %     к договору о практической подготовке обучающихся
-    %     \vskip .5\baselineskip
-    %     №\tline{}{90pt} от \tline{}{90pt}
-    % \end{minipage}
-
     \begin{flushright}
         Приложение №#1 \\
         к договору на прохождение практики студентами \\
@@ -401,10 +409,10 @@
 
 \appendix{1}{Список обучающихся, направляемых в профильную организацию}{
     \newcounter{studentno}
-    \def\addStudent#1{
+    \def\addStudent#1#2#3{
         \stepcounter{studentno}
         \thestudentno &
-        #1 &
+        #1 \linebreak #2 \linebreak #3 &
         Механико\,--\linebreak{}ма\-те\-ма\-ти\-чес\-кий факультет &
         01.05.01. Фундаментальные математика и механика &
         \dateRangeCell{\practiceBeginDate}{\practiceEndDate} \\
@@ -412,11 +420,11 @@
     }
     \begin{tabularx}{\textwidth}{|p{1.5em}|X|p{7em}|p{10em}|p{8em}|}
         \hline
-            \textbf{№ п/п} &
+            \textbf{№ \newline п/п} &
             \textbf{ФИО обучающегося} &
-            \textbf{Факультет, Институт, Филиал, курс} &
-            \textbf{Направление подготовки (специальность)} &
-            \textbf{Сроки практической подготовки} \\
+            \textbf{Факультет, \newline Институт, \newline Филиал, курс} &
+            \textbf{Направление \newline подготовки \newline (специальность)} &
+            \textbf{Сроки \newline практической \newline подготовки} \\
         \hline
         \studentsList
     \end{tabularx}
@@ -431,8 +439,8 @@
     }
     \begin{tabularx}{\textwidth}{|p{1.5em}|X|X|}
         \hline
-            \textbf{№ п/п} &
-            \textbf{Список помещений, оборудования и технических средств} &
+            \textbf{№ \newline п/п} &
+            \textbf{Список помещений, оборудования \newline и технических средств} &
             \textbf{Адрес местонахождения помещения} \\
         \hline
         \roomsList
