--- a/annex.tex
+++ b/annex.tex
@@ -4,45 +4,74 @@
 %%%                          ИНФОРМАЦИЯ ДЛЯ ОТЧЕТА                           %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% Дата заключения договора.
 \def\date{%
-    <<\ul{1}>> \ul{февраля} \ul{2023} г.
+    <<7>> февраля 2023~г.
 }
 
+% ФИО студента в родительном падеже.
 \def\studentName{%
-    % В родиетльном падеже.
     ФИО студента%
 }
+
+% ФИО руководителя практики от МГУ.
+% ВАЖНО: зависит от кафедры.
 \def\MSUAdviser{%
     Арушанян Игорь Олегович%
 }
+
+% ФИО руководителя практики от предприятия.
 \def\organizationAdviser{%
-    ФИО руководителя от предприятия%
+    Иванов Иван Иванович%
 }
+
+% Тема практики.
 \def\theme{%
-    тема%
+    Тема%
 }
+
+% Подписи со стороны организации и со стороны МГУ.
+% Примечание: на приложениях должны расписаться
+% представители организации (обычно директор и/или
+% рукводитель практики) и руководитель практики
+% от МГУ (см. \MSUAdviser выше).
+% Для добавления подписей заготовлен макрос \addSign;
+% Если он не подходит, то можно вставить просто линию,
+% используя макрос \addLine
 \def\organizationSigns{
-    % \addSign{должность}{ФИО}
-    % \addSign{руководитель}{ФИО руководителя}
-    \addSign{директор}{Фамилия~И.\,О.}
+    \addSign{директор}{Иванов~И.\,И.}
+    \addSign{руководитель}{Иванов~И.\,И.}
 }
 \def\MSUSigns{
     \addSign{руководитель}{Арушанян~И.\,О.}
 }
 
+% Текст индивидуального задания.
+% Примечание: можно писать в несколько абзацев.
 \long\def\task{
-    Индивидуальное задание
+    Текст индивидуального задания.
+
+    \lipsum[1-2]
 }
+
+% План-график.
+% Для добавления этапа в таблицу необходимо использовать
+% макрос \addStage:
+% \addStage{дата начала}{дата окончания}{форма контроля}{этап}
 \def\plan{
-    % \addStage{дата начала}{дата окончания}{форма контроля}{этап}
     \addStage
         {2 февраля 2023}
         {28 февраля 2023}
         {Рабочие материалы для руководителя практики.}
-        {длинное описание очередного этапа \par \lipsum[2]}
+        {Описание этапа. \lipsum[2]}
 }
+
+% Текст отзыва.
+% Примечание: можно писать в несколько абзацев.
 \long\def\report{
-    Отзыв
+    Текст отзыва.
+
+    \lipsum[1-2]
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -135,17 +164,17 @@
     \def\filedname{#1\quad}%
     \setlength{\fieldwidth}{\textwidth - \widthof{\filedname}}%
     \filedname
-    \begin{minipage}[t]{\fieldwidth}
+    % \begin{minipage}[t]{\fieldwidth}
         \ul#2%
-    \end{minipage}
+    % \end{minipage}
 }
 
-\newlength{\baselineskipCOPY}
-\setlength{\baselineskipCOPY}{\baselineskip}
+% \newlength{\baselineskipCOPY}
+% \setlength{\baselineskipCOPY}{\baselineskip}
 
-\def\strut#1{%
-    \addlinespace[#1\baselineskipCOPY]%
-}
+% \def\strut#1{%
+%     \addlinespace[#1\baselineskipCOPY]%
+% }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                             ТЕКСТ ДОКУМЕНТА                              %%%
@@ -155,10 +184,15 @@
 \thispagestyle{empty}
 \pagestyle{empty}
 
-\def\addSign#1#2{
-    \\[20pt]
-    #1 \\[5pt]
-    \sign{#2}
+\def\addSign#1#2{%
+    \\[20pt]%
+    #1 \\[5pt]%
+    \sign{#2}%
+}
+
+\def\addLine{%
+    \\%
+    \underline{\hskip \textwidth}%
 }
 
 \long\def\appendix#1#2{
@@ -168,16 +202,17 @@
         Приложение \\
         к договору на прохождение практики студентами \\
         Московского государственного университета имени М.\,В.~Ломоносова \\
-        в организации (учреждении, предприятии)
+        в организации (учреждении, предприятии) \\
+        % от \trim{\date}
     \end{flushright}
 
     \vskip \baselineskip
 
     \SECTION{#1}
 
-    \multiLineField{Студента 6 курса}{\studentName}
-    \multiLineField{Руководитель от МГУ имени М.\,В.~Ломоносова}{\MSUAdviser}
-    \multiLineField{Руководитель от предприятия}{\organizationAdviser}
+    \multiLineField{Студента 6 курса}{\studentName} \\
+    \multiLineField{Руководитель от МГУ имени М.\,В.~Ломоносова}{\MSUAdviser} \\
+    \multiLineField{Руководитель от предприятия}{\organizationAdviser} \\
     \multiLineField{Тема}{\theme}
 
     #2
