--- a/contract.tex
+++ b/contract.tex
@@ -6,7 +6,7 @@
 
 % Дата заключения договора.
 \def\date{%
-    <<7>> февраля 2023 г.
+    <<7>> февраля 2023~г.
 }
 
 % ФИО декана в родительном падеже,
